k8s/deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motd-api-deploy
  labels:
    app: motd-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: motd-api
  template:
    metadata:
      labels:
        app: motd-api
        env: prod
    spec:
      containers:
      - name: motd-api
        image: nossblade/motd-api
        ports:
        - containerPort: 5000
