k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-motd-api
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
