k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  ingressClassName: nginx
  rules:
  - host: "crusson.amnay.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-motd-api
            port:
              number: 5000
